fdo#78301 : Size of word-arts change during import.

- Do not resize the fallback geometry for Word-Arts(VML), since the
  overlay geometry is constructed using the properties of the
  fallback geometry.
- The resize autoshape to fit text attr of FontWork/Word-Art should
  always be false for the fallback geometry(the SdrObject).

Change-Id: If8badb382c525875a07a0a9e6268cec036739001